--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   
       <!-- Links section 1. Replace the # inside of the "" with your links. -->
       <div class="links-container">
-        <a href="https://kdbfaucet-engine.w3spaces.com/" class="w3-button w3-hover-blue w3-large w3-black" style="width: 350px;" target="_blank"></i>One Time Password</a>
+        <a href="https://kdbfaucet-engine.w3spaces.com/" class="w3-button w3-hover-blue w3-large w3-black" style="width: 350px;">One Time Password</a>
         <a href="#" class="w3-button w3-hover-blue w3-large w3-black" style="width: 350px;" target="_blank"></i>...</a>
         <a href="#" class="w3-button w3-hover-blue w3-large w3-black" style="width: 350px;" target="_blank"></i>...</a>
       </div>
