--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Syne">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link rel="icon" type="image/x-icon" href="landing.ico"> <!-- Favicon link -->
       <title>KDBFAUCET.</title>
       <style>
       
