--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     <!-- Links section 1. Replace the # inside of the "" with your links. -->
     <div class="links-container">
       <a href="https://kdbfaucet-engine.w3spaces.com/" class="w3-button w3-hover-blue w3-large w3-black" style="width: 350px;">One Time Password</a>
-      <a href="#" class="w3-button w3-hover-blue w3-large w3-black" style="width: 350px;" target="_blank"></i>...</a>
-      <a href="#" class="w3-button w3-hover-blue w3-large w3-black" style="width: 350px;" target="_blank"></i>...</a>
+      <a href="juliantogreg.html" class="w3-button w3-hover-blue w3-large w3-black" style="width: 350px;">Julian(JDE) to Gregorian</a>
+      <a href="#" class="w3-button w3-hover-blue w3-large w3-black" style="width: 350px;">...</a>
     </div>
   </div>
 
