sql formatter added

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="links-container">
       <a href="https://kdbfaucet-engine.w3spaces.com/" class="w3-button w3-hover-blue w3-large w3-black" style="width: 350px;">One Time Password</a>
       <a href="juliantogreg.html" class="w3-button w3-hover-blue w3-large w3-black" style="width: 350px;">Julian(JDE) to Gregorian</a>
-      <a href="#" class="w3-button w3-hover-blue w3-large w3-black" style="width: 350px;">...</a>
+      <a href="sqlformatter.html" class="w3-button w3-hover-blue w3-large w3-black" style="width: 350px;">SQL Formatter</a>
     </div>
   </div>
 
