--- a/juliantogreg.html
+++ b/juliantogreg.html
@@ -83,6 +83,15 @@
             document.getElementById("output").innerHTML = "Gregorian Date: " + formattedDate;
         }
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HDP06W68BX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-HDP06W68BX');
+    </script>
 
 </body>
 </html>
