--- a/sqlformatter.html
+++ b/sqlformatter.html
@@ -81,6 +81,14 @@
           document.getElementById('outputSql').value = '';
       }
   </script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HDP06W68BX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'G-HDP06W68BX');
+  </script>
 </body>
 </html>
