--- a/peter.html
+++ b/peter.html
@@ -40,6 +40,15 @@
   }
   </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HDP06W68BX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HDP06W68BX');
+</script>
 
 <body class="w3-white">
   <!-- Image and name container. -->
